cmake_minimum_required(VERSION 3.19)
project(tapi4j C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
add_library(tapi4j SHARED one_papachi_tapi4j_TapI4j.c one_papachi_tapi4j_TapI4j.h)
include_directories(/usr/local/lib)
include_directories(/usr/local/include)
include_directories(/usr/local/lib/pkgconfig)
include_directories(/usr/local/include/fuse)
include_directories("$ENV{JAVA_HOME}/include")
include_directories("$ENV{JAVA_HOME}/include/darwin")
